--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="container header__container">
             <nav class="header__first-navbar">
                 <ul class="header__first-list">
-                    <li class="header__lists"><a class="header__links" href="#">Каталог</a></li>
-                    <li class="header__lists"><a class="header__links" href="#">Индивидуальная мебель</a></li>
+                    <li class="header__lists"><a class="header__links" href="./single.html">Каталог</a></li>
+                    <li class="header__lists"><a class="header__links" href="./single.html">Индивидуальная мебель</a></li>
                     <li class="header__lists"><a class="header__links" href="#">Контакты</a></li>
                 </ul>
             </nav>
@@ -23,7 +23,7 @@
             <nav class="header__second-navbar">
                 <ul class="header__second-list">
                     <li class="header__lists"><a class="header__links" href="#">О компании</a></li>
-                    <li class="header__lists"><a class="header__links" href="#"><span>+38 (099)-638-45-37</span></a>
+                    <li class="header__lists"><a class="header__links" href="tel:+380996384537"><span>+38 (099)-638-45-37</span></a>
                     </li>
                     <li class="header__lists"><a class="header__links" href="#">RU&nbsp;&nbsp;<span
                                 class="span ">></span></a></li>
@@ -88,7 +88,7 @@
         </section>
         <section class="wrapper">
             <div class="container wrapper__container">
-                <a href="#">
+                <a href="./single.html">
                     <div class="wrapper__first">
                         <img class="wrapper__img" src="img/furniture__images.png" alt="" width="" height="">
                         <div class="wrapper__titles">
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="./single.html">
                     <div class="wrapper__second">
                         <img class="wrapper__img-second" src="img/furniture__images-second.png" alt="" width=""
                             height="">
@@ -115,7 +115,7 @@
         </section>
         <section class="sector">
             <div class="container sector__container">
-                <a href="#">
+                <a href="./single.html">
                     <div class="sector__first">
                         <img class="sector__img" src="img/furniture__images-third.png" alt="" width="" height="">
                         <div class="sector__titles">
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="./single.html">
                     <div class="sector__second">
                         <img class="sector__img-second" src="img/furniture__images-fourth.png" alt="" width=""
                             height="">
@@ -141,7 +141,7 @@
         </section>
         <section class="section">
             <div class="container section__container">
-                <a href="#">
+                <a href="./single.html">
                     <div class="section__first">
                         <img class="section__img" src="img/furniture__images-fifth.png" alt="" width="" height="">
                         <div class="section__titles">
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="./single.html">
                     <div class="section__second">
                         <img class="section__img-second" src="img/furniture__images-sixth.png" alt="" width=""
                             height="">
@@ -168,7 +168,7 @@
         </section>
         <section class="part">
             <div class="container part__container">
-                <a href="#">
+                <a href="./single.html">
                     <div class="part__first">
                         <img class="part__img" src="img/furniture__images-seventh.png" alt="" width="" height="">
                         <div class="part__titles">
@@ -178,7 +178,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="./single.html">
                     <div class="part__second">
                         <img class="part__img-second" src="img/furniture__images-eighth.png" alt="" width="" height="">
                         <div class="part__titles-second">
@@ -194,7 +194,7 @@
         </section>
         <section class="content">
             <div class="container content__container">
-                <a href="#">
+                <a href="./single.html">
                     <div class="content__first">
                         <img class="content__img" src="img/furniture__images-nineth.png" alt="" width="" height="">
                         <div class="content__titles">
@@ -206,7 +206,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="./single.html">
                     <div class="content__second">
                         <img class="content__img-second" src="img/furniture__images-tenth.png" alt="" width=""
                             height="">
@@ -221,7 +221,7 @@
         </section>
         <section class="heroic">
             <div class="container heroic__container">
-                <a href="#">
+                <a href="./single.html">
                     <div class="heroic__first">
                         <img class="heroic__img" src="img/furniture__images-eleventh.png" alt="" width="" height="">
                         <div class="heroic__titles">
@@ -231,7 +231,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="./single.html">
                     <div class="heroic__second">
                         <img class="heroic__img-second" src="img/furniture__images-twelveth.png" alt="" width=""
                             height="">
@@ -246,7 +246,7 @@
         </section>
         <section class="galaxy">
             <div class="container galaxy__container">
-                <a href="#">
+                <a href="./single.html">
                     <div class="galaxy__first">
                         <img class="galaxy__img" src="img/furniture__images-thirteenth.png" alt="" width="" height="">
                         <div class="galaxy__titles">
@@ -258,7 +258,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="./single.html">
                     <div class="galaxy__second">
                         <img class="galaxy__img-second" src="img/furniture__images-fourteenth.png" alt="" width=""
                             height="">
@@ -272,7 +272,7 @@
         </section>
         <section class="jupiter">
             <div class="container jupiter__container">
-                <a href="#">
+                <a href="./single.html">
                     <div class="jupiter__first">
                         <img class="jupiter__img" src="img/furniture__images-fifteenth.png" alt="" width="" height="">
                         <div class="jupiter__titles">
@@ -284,7 +284,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="./single.html">
                     <div class="jupiter__second">
                         <img class="jupiter__img-second" src="img/furniture__images-sixteenth.png" alt="" width=""
                             height="">
